Update to 0.4.1. Fixed several layout bugs in Select component.

--- a/src/input/inputfield/inputfield.fx.css
+++ b/src/input/inputfield/inputfield.fx.css
@@ -40,6 +40,9 @@ input, textarea, select {
     font-size: 12px;
 }
 
+input, textarea, .select-overhaul, textarea {
+    border-radius: 2px 2px 0 0;
+}
 textarea {
     border-bottom: 1px solid #CFD8DC;
 }
